--- a/endpoints.yml
+++ b/endpoints.yml
@@ -1013,6 +1013,18 @@ endpoints:
     url:
       path: /v1/user/cancel_order
   response:
+  - body: ''
+    code: 200
+    name: "Cancel Order Success"
+    python_example: |-
+      req = {'id': 109}
+      api.post("/v1/user/cancel_order", json=req)
+    python_client_example: |-
+      api.post("/v1/user/cancel_order", id=109)
+    request:
+      body: "{\"id\": 109}"
+      url:
+        path: /v1/user/cancel_order
   - body: |-
       {
           "errors": [
@@ -1024,17 +1036,15 @@ endpoints:
       }
     code: 404
     name: "Cancel Order Fail Example"
+    python_example: |-
+      req = {'id': 109}
+      api.post("/v1/user/cancel_order", json=req)
     python_client_example: |-
       api.post("/v1/user/cancel_order", id=109)
     request:
       body: "{\"id\": 109}"
       url:
         path: /v1/user/cancel_order
-        query:
-        - description: "Order ID to cancel"
-          disabled: true
-          key: id
-          value: Integer
 - name: "Create a Withdraw"
   request:
     body:
