Change common to summary and move to top of public endpoints

--- a/endpoints.yml
+++ b/endpoints.yml
@@ -1,4 +1,155 @@
 endpoints:
+- name: Summary
+  request:
+    description: "Retrieve All Markets, All Currencies, and All Tickers in one call."
+    method: GET
+    url:
+      path: /v1/common
+  response:
+  - body: |-
+      {
+          "data": {
+              "currencies": [
+                  {
+                      "can_withdraw": false,
+                      "code": "MMO",
+                      "config": {
+                          "address_version": 50,
+                          "default_signer": 23,
+                          "price": 0.002,
+                          "required_confirmations": 6,
+                          "required_generate_confirmations": 120,
+                          "satoshi_per_byte": 100,
+                          "wif_version": 178,
+                          "withdraw_fee": "0.001"
+                      },
+                      "long_name": "MMOCoin",
+                      "metadata": {
+                          "delisting_date": "12/13/2018"
+                      },
+                      "precision": 8,
+                      "status": "delisted",
+                      "type": "bitcoin_like"
+                  },
+                  {
+                      "can_withdraw": true,
+                      "code": "BTC",
+                      "config": {
+                          "address_version": 0,
+                          "default_signer": 6,
+                          "explorerAddressURL": "https://live.blockcypher.com/btc/address/",
+                          "explorerTransactionURL": "https://live.blockcypher.com/btc/tx/",
+                          "p2sh_address_version": 5,
+                          "price": 8595.59,
+                          "required_confirmations": 2,
+                          "required_generate_confirmations": 100,
+                          "satoshi_per_byte": 15,
+                          "withdraw_fee": "0.0005"
+                      },
+                      "long_name": "Bitcoin",
+                      "metadata": {
+                          "withdraw_notices": []
+                      },
+                      "precision": 8,
+                      "status": "ok",
+                      "type": "bitcoin_like"
+                  },
+                  {
+                      "can_withdraw": true,
+                      "code": "BIS",
+                      "config": {
+                          "data_max": 1000,
+                          "default_signer": 54,
+                          "enable_address_data": true,
+                          "explorerAddressURL": "https://bismuth.online/search?quicksearch=",
+                          "explorerTransactionURL": "https://bismuth.online/search?quicksearch=",
+                          "price": 0.12891653720125376,
+                          "required_confirmations": 35,
+                          "withdraw_fee": "0.25"
+                      },
+                      "long_name": "Bismuth",
+                      "metadata": {
+                          "deposit_notices": [],
+                          "hidden": false
+                      },
+                      "precision": 8,
+                      "status": "ok",
+                      "type": "bismuth"
+                  }
+              ],
+              "markets": [
+                  {
+                      "base_currency": "BTC",
+                      "can_cancel": false,
+                      "can_trade": false,
+                      "can_view": false,
+                      "id": 8,
+                      "maker_fee": "0.0025",
+                      "market_currency": "MMO",
+                      "metadata": {
+                          "delisting_date": "12/13/2018",
+                          "market_notices": [
+                              {
+                                  "message": "Delisting Notice: This market has been delisted due to low volume. Please cancel your orders and withdraw your funds by 12/13/2018.",
+                                  "type": "warning"
+                              }
+                          ]
+                      },
+                      "taker_fee": "0.0025"
+                  },
+                  {
+                      "base_currency": "BTC",
+                      "can_cancel": true,
+                      "can_trade": true,
+                      "can_view": true,
+                      "id": 20,
+                      "maker_fee": "0",
+                      "market_currency": "BIS",
+                      "metadata": {
+                          "labels": []
+                      },
+                      "taker_fee": "0.005"
+                  }
+              ],
+              "tickers": [
+                  {
+                      "ask": null,
+                      "bid": null,
+                      "day_avg_price": null,
+                      "day_change": null,
+                      "day_high": null,
+                      "day_low": null,
+                      "day_open": null,
+                      "day_volume_base": "0",
+                      "day_volume_market": "0",
+                      "id": 8,
+                      "id_hr": "MMO_BTC",
+                      "last": "0.00000076"
+                  },
+                  {
+                      "ask": "0.000014",
+                      "bid": "0.00001324",
+                      "day_avg_price": "0.0000147000191353",
+                      "day_change": "-0.023086269744836",
+                      "day_high": "0.00001641",
+                      "day_low": "0.00001292",
+                      "day_open": "0.00001646",
+                      "day_volume_base": "0.36885974",
+                      "day_volume_market": "25092.46665642",
+                      "id": 20,
+                      "id_hr": "BIS_BTC",
+                      "last": "0.00001608"
+                  }
+              ]
+          }
+      }
+    code: 200
+    name: "Summary Example"
+    python_client_example: |-
+      {'currencies': api.currencies, 'markets': api.markets, 'tickers': api.tickers}
+    request:
+      url:
+        path: /v1/common
 - name: Ticker
   request:
     description: |-
@@ -234,157 +385,6 @@ endpoints:
     request:
       url:
         path: /v1/currencies
-- name: Common
-  request:
-    description: "Retrieve All Markets, All Currencies, and All Tickers in one call."
-    method: GET
-    url:
-      path: /v1/common
-  response:
-  - body: |-
-      {
-          "data": {
-              "currencies": [
-                  {
-                      "can_withdraw": false,
-                      "code": "MMO",
-                      "config": {
-                          "address_version": 50,
-                          "default_signer": 23,
-                          "price": 0.002,
-                          "required_confirmations": 6,
-                          "required_generate_confirmations": 120,
-                          "satoshi_per_byte": 100,
-                          "wif_version": 178,
-                          "withdraw_fee": "0.001"
-                      },
-                      "long_name": "MMOCoin",
-                      "metadata": {
-                          "delisting_date": "12/13/2018"
-                      },
-                      "precision": 8,
-                      "status": "delisted",
-                      "type": "bitcoin_like"
-                  },
-                  {
-                      "can_withdraw": true,
-                      "code": "BTC",
-                      "config": {
-                          "address_version": 0,
-                          "default_signer": 6,
-                          "explorerAddressURL": "https://live.blockcypher.com/btc/address/",
-                          "explorerTransactionURL": "https://live.blockcypher.com/btc/tx/",
-                          "p2sh_address_version": 5,
-                          "price": 8595.59,
-                          "required_confirmations": 2,
-                          "required_generate_confirmations": 100,
-                          "satoshi_per_byte": 15,
-                          "withdraw_fee": "0.0005"
-                      },
-                      "long_name": "Bitcoin",
-                      "metadata": {
-                          "withdraw_notices": []
-                      },
-                      "precision": 8,
-                      "status": "ok",
-                      "type": "bitcoin_like"
-                  },
-                  {
-                      "can_withdraw": true,
-                      "code": "BIS",
-                      "config": {
-                          "data_max": 1000,
-                          "default_signer": 54,
-                          "enable_address_data": true,
-                          "explorerAddressURL": "https://bismuth.online/search?quicksearch=",
-                          "explorerTransactionURL": "https://bismuth.online/search?quicksearch=",
-                          "price": 0.12891653720125376,
-                          "required_confirmations": 35,
-                          "withdraw_fee": "0.25"
-                      },
-                      "long_name": "Bismuth",
-                      "metadata": {
-                          "deposit_notices": [],
-                          "hidden": false
-                      },
-                      "precision": 8,
-                      "status": "ok",
-                      "type": "bismuth"
-                  }
-              ],
-              "markets": [
-                  {
-                      "base_currency": "BTC",
-                      "can_cancel": false,
-                      "can_trade": false,
-                      "can_view": false,
-                      "id": 8,
-                      "maker_fee": "0.0025",
-                      "market_currency": "MMO",
-                      "metadata": {
-                          "delisting_date": "12/13/2018",
-                          "market_notices": [
-                              {
-                                  "message": "Delisting Notice: This market has been delisted due to low volume. Please cancel your orders and withdraw your funds by 12/13/2018.",
-                                  "type": "warning"
-                              }
-                          ]
-                      },
-                      "taker_fee": "0.0025"
-                  },
-                  {
-                      "base_currency": "BTC",
-                      "can_cancel": true,
-                      "can_trade": true,
-                      "can_view": true,
-                      "id": 20,
-                      "maker_fee": "0",
-                      "market_currency": "BIS",
-                      "metadata": {
-                          "labels": []
-                      },
-                      "taker_fee": "0.005"
-                  }
-              ],
-              "tickers": [
-                  {
-                      "ask": null,
-                      "bid": null,
-                      "day_avg_price": null,
-                      "day_change": null,
-                      "day_high": null,
-                      "day_low": null,
-                      "day_open": null,
-                      "day_volume_base": "0",
-                      "day_volume_market": "0",
-                      "id": 8,
-                      "id_hr": "MMO_BTC",
-                      "last": "0.00000076"
-                  },
-                  {
-                      "ask": "0.000014",
-                      "bid": "0.00001324",
-                      "day_avg_price": "0.0000147000191353",
-                      "day_change": "-0.023086269744836",
-                      "day_high": "0.00001641",
-                      "day_low": "0.00001292",
-                      "day_open": "0.00001646",
-                      "day_volume_base": "0.36885974",
-                      "day_volume_market": "25092.46665642",
-                      "id": 20,
-                      "id_hr": "BIS_BTC",
-                      "last": "0.00001608"
-                  }
-              ]
-          }
-      }
-    code: 200
-    name: "Common Example"
-    python_client_example: |-
-      {'currencies': api.currencies, 'markets': api.markets, 'tickers': api.tickers}
-    request:
-      url:
-        path: /v1/common
 - name: Market
   request:
     description: |-
